Little typing error

--- a/templates/start.html
+++ b/templates/start.html
@@ -14,7 +14,7 @@
         <select id="display" class="custom-select my-1 mr-sm-2" name="display">
             <option selected value="">Choose Display...</option>
             <option value="TFT LCD">TFT LCD</option>
-            <option value="IPS LCD">IPS LCF</option>
+            <option value="IPS LCD">IPS LCD</option>
             <option value="S-LCD">S-LCD</option>
             <option value="Amoled">Amoled</option>
             <option value="SuperAmoled">SuperAmoled</option>
