--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link href="../static/style.css" rel="stylesheet" type="text/css">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MTurk HIT</title>
 </head>
-<body bgcolor="aqua">
-<img src="{{imm}}" class="vertical">
 
-<form name="passdata" action="/indexnext" method="post">
-    <div>
-        <input type="range" name="quality" min="0" value="0" max="100"
-               oninput="document.getElementById('q').innerHTML=this.value" class="vertical">
-        <div id="box" class="vertical">← Bad Poor Fair Good Excellent →
-            <label id="q" class="vertical"></label>
-        </div>
+<body>
+
+<div class="d-flex justify-content-center align-items-center container">
+    <div class="row">
+        <form name="passdata" action="/indexnext" method="post">
+
+
+            <div class="form-group">
+                <img src="{{imm}}" class="vertical">
+            </div>
+
+            <ul>
+                <span class="badge badge-pill badge-danger">Bad</span>
+                <span class="badge badge-pill badge-warning">Poor</span>
+                <span class="badge badge-pill badge-secondary">Fair</span>
+                <span class="badge badge-pill badge-primary">Good</span>
+                <span class="badge badge-pill badge-success">Excellent</span>
+            </ul>
+
+            <div class="form-group">
+                <input type="range" name="quality" min="0" value="0" max="100">
+            </div>
+
+            <div class="form-group">
+                <button class="btn btn-primary btn-lg btn-block" value="Submit" type="submit" id="submit">Next Image
+                </button>
+            </div>
+
+            <div class="form-group">
+                <h8>{{error}}</h8>
+            </div>
+
+        </form>
+
     </div>
-    <input type="submit" class="vertical" value="Next Image">
-</form>
-<h4 class="vertical">{{error}}</h4>
+</div>
 </body>
 </html>
